--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
 
           {% if site.show_downloads %}
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip">Download this project as a .zip file</a>
+               <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
             </section>
           {% endif %}
         </header>
