--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {{ content }}
+        <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#46b798', 'A5841X35');kofiwidget2.draw();</script> 
       </section>
     </div>
 
