--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,8 @@
       <section id="main_content" class="inner">
         <!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/ntkme/github-buttons/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue ntkme/github-buttons on GitHub">Issue</a>
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/rickstaa" data-size="large" aria-label="Follow @rickstaa on GitHub">Follow @rickstaa</a>
         {{ content }}
 <a href='https://ko-fi.com/A5841X35' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>      </section>
     </div>
