--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,14 @@
   <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
       <!-- Github buttons -->
-
-
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/subscription" data-icon="octicon-eye" data-size="large" aria-label="Watch rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Watch</a>
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10" data-icon="octicon-star" data-size="large" aria-label="Star rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Star</a>
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/fork" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Fork</a>
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Issue</a>
       <!-- Github buttons -->
       {{ content }}
       <a href='https://ko-fi.com/A5841X35' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a> </section>
