--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,8 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Issue</a>
       <!-- Place this tag where you want the button to render. -->
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
+      <script src="https://liberapay.com/rickstaa/widgets/button.js"></script>
+      <noscript><a href="https://liberapay.com/rickstaa/donate"><img src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript>
       <!-- Github buttons -->
       {{ content }}
 
