--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,10 +44,9 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/issues" data-icon="octicon-issue-opened" data-size="large" aria-label="Issue rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Issue</a>
       <!-- Place this tag where you want the button to render. -->
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
-      <a href='https://ko-fi.com/A5841X35' target='_blank'><img height='36' style=' margin-top:10px;border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
       <!-- Github buttons -->
       {{ content }}
-
+      <a href='https://ko-fi.com/A5841X35' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
   </div>
 
   <!-- FOOTER  -->
