--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,6 @@
       <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2> {% if site.show_downloads %}
       <section id="downloads">
         <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-        <a href='https://ko-fi.com/A5841X35' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
       </section>
       {% endif %}
     </header>
@@ -47,7 +46,7 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
       <!-- Github buttons -->
       {{ content }}
-      <a href='https://ko-fi.com/A5841X35' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+      <a href='https://liberapay.com/rickstaa/donate' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
   </div>
 
   <!-- FOOTER  -->
