--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,11 @@
       <!-- Github buttons -->
       {{ content }}
       <a href='https://liberapay.com/rickstaa/donate' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+      <script type='text/javascript' src='https://liberapay.com/rickstaa/donate'></script>
+      <script type='text/javascript'>
+        kofiwidget2.init('Show support', '#000000', 'A5841X35');
+        kofiwidget2.draw();
+      </script>
   </div>
 
   <!-- FOOTER  -->
