--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,8 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
       <!-- Github buttons -->
       {{ content }}
-      <a href='https://liberapay.com/rickstaa/donate' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi5.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+      <script src="https://liberapay.com/rickstaa/widgets/button.js"></script>
+<noscript><a href="https://liberapay.com/rickstaa/donate"><img src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript>
       </div>
 
   <!-- FOOTER  -->
