Donate button update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
       <!-- Github buttons -->
       {{ content }}
       <script src="https://liberapay.com/rickstaa/widgets/button.js"></script>
-<noscript><a href="https://liberapay.com/rickstaa/donate"><img src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript>
+<noscript><a href="https://www.paypal.me/rstaa"><img src="donate.svg"></a></noscript>
       </div>
 
   <!-- FOOTER  -->
