--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,8 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
       <!-- Github buttons -->
       {{ content }}
-      <script src="https://liberapay.com/rickstaa/widgets/button.js"></script>
-<noscript><a href="https://www.paypal.me/rstaa"><img src="donate.svg"></a></noscript>
-      </div>
+      <a href="https://www.paypal.me/rstaa"><img src="donate.svg"></a>
+  </div>
 
   <!-- FOOTER  -->
   <div id="footer_wrap" class="outer">
