--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
       <!-- Github buttons -->
       {{ content }}
-      <a href="https://www.paypal.me/rstaa"><img src="donate.svg"></a>
-  </div>
+      <a href="https://www.paypal.me/rstaa"><img src="7-2-paypal-donate-button-download-png-thumb.png"></a>
+    </div>
 
   <!-- FOOTER  -->
   <div id="footer_wrap" class="outer">
