--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
       <a class="github-button" href="https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip" data-icon="octicon-cloud-download" data-size="large" aria-label="Download rickstaa/Todoist_Global_Shortcuts_WIN10 on GitHub">Download</a>
       <!-- Github buttons -->
       {{ content }}
-      <!--<a href="https://www.paypal.me/rstaa"><img src="assets\images\7-2-paypal-donate-button-download-png-thumb.png" style="margin: 0px; padding: 0px; border: 0px; box-shadow: 0px; -webkit-box-shadow: 0 0 0 0;"></a>
-    </div> -->
+      <a href="https://www.paypal.me/rstaa"><img src="assets\images\7-2-paypal-donate-button-download-png-thumb.png" style="margin: 0px; padding: 0px; border: 0px; box-shadow: 0px; -webkit-box-shadow: 0 0 0 0;"></a>
+    </div>
 
   <!-- FOOTER  -->
   <div id="footer_wrap" class="outer">
